File: components/nexus-pax-exam/src/main/java/org/sonatype/nexus/pax/distribution/BaseNexusTestDistribution.java