@@ -12,27 +12,17 @@
  */
 package org.sonatype.nexus.pax.distribution;
 
-import java.io.File;
-import java.net.URI;
-import java.util.ArrayList;
-import java.util.List;
-
-import org.ops4j.pax.exam.Option;
-import org.ops4j.pax.exam.options.MavenUrlReference;
-
 import static org.ops4j.pax.exam.CoreOptions.composite;
-import static org.ops4j.pax.exam.CoreOptions.maven;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
 import static org.ops4j.pax.exam.CoreOptions.propagateSystemProperty;
-import static org.ops4j.pax.exam.CoreOptions.systemProperty;
-import static org.ops4j.pax.exam.CoreOptions.vmOption;
 import static org.ops4j.pax.exam.CoreOptions.wrappedBundle;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.editConfigurationFileExtend;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.features;
-import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.karafDistributionConfiguration;
+
+import org.ops4j.pax.exam.Option;
 
 /**
- * BASE distribution for Nexus testing.
+ * Base implementation of {@link NexusTestDistribution} that provides core Nexus functionality.
  *
  * @since 3.0
  */
@@ -46,84 +36,35 @@ public class BaseNexusTestDistribution
 
   @Override
   public Option[] distribution(final Distribution distribution) {
-    List<Option> options = new ArrayList<>();
-
-    // Add base configuration options
-    options.add(karafDistributionConfiguration());
-    
-    // Add bundle provisioning options
-    options.add(provisionBundles());
-    
-    // Add feature installation options
-    options.add(installFeatures());
-    
-    // Add configuration edit options
-    options.add(editConfigurations());
-    
-    // Add Nexus configuration options
-    options.add(configureNexus());
-    
-    // Add Java VM options with Java 21 compatibility
-    options.add(javaVMCompositeOption());
-    
-    // Add Virtual Thread support
-    options.add(propagateSystemProperty("test.virtual.threads"));
-    
-    return options.toArray(new Option[0]);
-  }
-
-  /**
-   * Provisions required bundles for the test container.
-   */
-  protected Option provisionBundles() {
-    return composite(
+    return new Option[] {
+        // Configure Nexus for testing
+        configureNexus(),
+        
+        // Provision core bundles
         mavenBundle("org.sonatype.nexus", "nexus-base-template"),
-        wrappedBundle(maven("org.example", "example-bundle").versionAsInProject())
-    );
+        
+        // Edit configuration files
+        editConfigurationFileExtend("etc/system.properties", "nexus.loadAsOSS", "true"),
+        
+        // Install features
+        features("mvn:org.sonatype.nexus/nexus-repository-content-testsupport/*/xml/features"),
+        features("mvn:org.sonatype.nexus/nexus-repository-testsupport/*/xml/features"),
+        
+        // Enable Virtual Thread support in tests
+        propagateSystemProperty("test.virtual.threads"),
+        
+        // Apply Java 21 compatible VM options
+        javaVMCompositeOption()
+    };
   }
-
-  /**
-   * Installs required features in the test container.
-   */
-  protected Option installFeatures() {
-    MavenUrlReference featuresUrl = maven()
-        .groupId("org.sonatype.nexus")
-        .artifactId("nexus-features")
-        .classifier("features")
-        .type("xml")
-        .versionAsInProject();
-
-    return composite(
-        features(featuresUrl, "nexus-repository-content-test-support"),
-        features(featuresUrl, "nexus-repository-test-support")
-    );
-  }
-
-  /**
-   * Edits configuration files in the test container.
-   */
-  protected Option editConfigurations() {
-    return composite(
-        editConfigurationFileExtend("etc/system.properties", "org.osgi.framework.system.packages.extra",
-            "sun.misc"),
-        editConfigurationFileExtend("etc/nexus.properties", "nexus.test.mode", "true")
-    );
-  }
-
+  
   @Override
   public Option javaVMCompositeOption() {
     return composite(
-        // Java 21 compatible VM options
-        vmOption("-XX:+UseZGC"),
-        vmOption("-XX:+ZGenerational"),
-        vmOption("-Djdk.virtualThreadScheduler.parallelism=16"),
-        vmOption("-Djdk.virtualThreadScheduler.maxPoolSize=256"),
-        vmOption("-Djdk.tracePinnedThreads=full"),
-        
-        // System properties for Java 21 compatibility
-        systemProperty("java.awt.headless").value("true"),
-        systemProperty("java.net.preferIPv4Stack").value("true"),
-        systemProperty("java.util.logging.config.file").value("etc/java.util.logging.properties")
+        // Java 21 specific VM options
+        propagateSystemProperty("java.version"),
+        propagateSystemProperty("java.vm.version"),
+        propagateSystemProperty("java.vm.vendor")
     );
   }
 }
